Adding new documentation files

--- a/index.html
+++ b/index.html
@@ -1,71 +1,114 @@
-<!doctype html>
-<html>
-  <head>
+
+<!DOCTYPE html>
+<!--[if IE 8 ]>
+<html id="ie8" lang="en-US">
+<![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--><html lang="en-US"><!--<![endif]-->
+
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Tuts GitHub Pages by jbrad</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Tuts GitHub Pages</h1>
-        <p>Example project for tutorial on GitHub Pages for Tuts+</p>
+    <title>Tuts GitHub Pages</title>
+    <link rel='stylesheet' id='theme-css'  href='http://jbrad.github.io/tuts-github-pages/style.css?ver=1.0.0' type='text/css' media='all' />
+    <script type='text/javascript' src='http://code.jquery.com/jquery-1.11.0.min.js'></script>
+    <script type='text/javascript' src='http://code.jquery.com/jquery-migrate-git.min.js'></script>
+    <script type='text/javascript' src='http://jbrad.github.io/tuts-github-pages/js/theme.min.js?ver=1.0.0'></script>
+</head>
 
-        <p class="view"><a href="https://github.com/jbrad/tuts-github-pages">View the Project on GitHub <small>jbrad/tuts-github-pages</small></a></p>
+<body class="home page">
 
-
-        <ul>
-          <li><a href="https://github.com/jbrad/tuts-github-pages/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/jbrad/tuts-github-pages/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/jbrad/tuts-github-pages">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/jbrad">jbrad</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+<header id="masthead" class="blog-masthead">
+    <div class="container">
+        <nav class="blog-nav">
+            <li class="menu-item current-menu-item current_page_item"><a href="#">Home</a></li>
+        </nav>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
-</html>
+</header> <!-- /header -->
+
+<div class="container">
+
+    <div class="blog-header">
+        <h1 class="blog-title">
+            <a href="#" title="Tuts+ GitHub Pages" rel="home">Tuts+ GitHub Pages</a>
+        </h1>
+        <p class="lead blog-description">Example project for tutorial on GitHub Pages for Tuts+</p>
+    </div> <!-- /.blog-header -->
+
+    <div class="row">
+
+        <section class="col-sm-8 blog-main">
+
+            <article class="blog-post ">
+                <h1 class="blog-post-title">Tuts+ GitHub Pages</h1>
+
+                <div class="blog-content">
+                    <h3>Introduction</h3>
+
+<p>I&#8217;m sure that a lot of you who have created WordPress themes or plugins have created documentation for them. A lot of times that also means setting up another domain and hosting. There&#8217;s also creating the site, maybe using your theme, and managing the content. It&#8217;s all of these steps that can add to reasons why the documentation step happens last or not at all.</p>
+<p>What if it could be easier? What is you could keep your documentation in the same repository as your project&#8217;s code? It definitely can be if you are using <a href="https://github.com/"><span class="s1">GitHub</span></a> to host your code. Let&#8217;s talk about <a href="https://pages.github.com/"><span class="s1">GitHub Pages</span></a>.</p>
+<p>This is the first post in the series to talk about GitHub Pages. I will give my thoughts about why it&#8217;s important to keep your documentation with your code. I will also give a little overview on what GitHub Pages is and how to enable it for your project.</p>
+
+<h3>What is GitHub Pages?</h3>
+<p>GitHub Pages is a public website hosting service provided by GitHub. You get can have one website for your organization or user and unlimited sites for your projects. You can use GitHub Pages for both public and private repositories.</p>
+<p>The pages are served as HTTP, not HTTPS. That is just something to keep in mind to not use this for anything you want encrypted like passwords or credit card numbers.</p>
+<p>There are a number of popular projects that are hosted on GitHub Pages, and you more than likely have viewed them. If you have looked at the documentation for <a href="http://getbootstrap.com/"><span class="s1">Bootstrap</span></a>, <a href="http://fontawesome.io/"><span class="s1">Font Awesome</span></a>, or <a href="http://yeoman.io/"><span class="s1">Yeoman</span></a>, then you have visited a site that is hosted on GitHub Pages.</p>
+<p>The sites load crazy fast and your changes are visible quickly. It really is true what they say,</p>
+<p><i>Hosted directly from your GitHub repository. Just edit, push, and your changes are live.</i></p>
+
+<h3>Enabling GitHub Pages</h3>
+<p>There are a number of ways to set up GitHub Pages for your project. You can generate a site via GitHub Pages or you can start from scratch. For this post we are going to generate a site and in the next post we will start from scratch. You can follow along <a href="https://pages.github.com/"><span class="s1">here</span></a>, just make sure to select &#8220;Project site&#8221; and &#8220;Generate a site&#8221;. Also make sure to create a new GitHub repository or use an existing one. You can view my <a href="https://github.com/jbrad/tuts-github-pages"><span class="s1">example project</span></a> as well.</p>
+<p>The first thing we need to do is enable GitHub Pages for your repository. You can do this by going to &#8220;Settings&#8221;, located in the menu on the right.</p>
+<p>The next thing we will want to do is scroll down to the &#8220;GitHub Pages&#8221; section and click on the &#8220;Automatic page generator&#8221; button.</p>
+<p>Now you will be able to edit your first page. Make sure to add an appropriate Title and Tagline. You can also use <a href="https://help.github.com/articles/github-flavored-markdown"><span class="s1">GitHub Flavored Markdown</span></a> to edit the contents of the page in the Body section. Once you have your content ready, scroll down to the bottom of the page.</p>
+<p>Be sure to notice the &#8220;Google Analytics Tracking ID&#8221; option. If this is something that you want to track page views, be sure to create a new tracking ID and paste it in that field (ex: UA-XXXXXXXX-X).</p>
+<p>Once you have finished getting everything where you want it for your first page, go ahead and click the &#8220;Continue to layouts&#8221; button.</p>
+<p>Now we will be able to select a layout for our site. The default layout is &#8220;Slate&#8221;, but there are many others you can choose from.</p>
+<p>The &#8220;Minimal&#8221; layout is my favorite, so I chose to use it.</p>
+<p>Once you choose the layout you want, simply click the &#8220;Publish&#8221; button. You will then be directed back to your project and there will be a little alert that will give you a link to your new site. Go ahead and click on that link, but do know that it can take up to 10 minutes for your site to be generated.</p>
+<p>You can also view my <a href="http://jbrad.github.io/tuts-github-pages/"><span class="s1">project&#8217;s site</span></a>.</p>
+
+<h3>Conclusion</h3>
+<p>In this first post I talked about why to keep your documentation close to your code and gave a little introduction to GitHub Pages. I also covered how to enable it for your project. In the next post I will talk about <a href="http://jekyllrb.com/"><span class="s1">Jekyll</span></a>, one of the technologies that powers it, and how to use it to generate your documentation pages.</p>
+                </div><!-- /.blog-content -->
+
+            </article><!-- /.blog-post -->
+
+        </section><!-- /.blog-main -->
+
+        <aside class="col-sm-3 col-sm-offset-1 blog-sidebar">
+    <div id="search-2" class="widget widget_search">
+        <form role="search" method="get" id="searchform" action="http://localhost:8888/ecm-child-themes/">
+            <input placeholder="Search..." type="text" value="" name="s" id="s" class="form-control input-lg"/>
+        </form>
+    </div>
+    <div id="text-11" class="widget widget_text">
+        <h4 class="widget-title">Resources</h4>
+        <div class="textwidget">
+            <ul class="ul1">
+                <li><a href="https://github.com/">GitHub</a></li>
+                <li><a href="https://pages.github.com/">GitHub Pages</a></li>
+                <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
+                <li><a href="http://fontawesome.io/">Font Awesome</a></li>
+                <li><a href="http://yeoman.io/">Yeoman</a></li>
+                <li><a href="http://jekyllrb.com/">Jekyll</a></li>
+                <li><a href="https://github.com/jbrad/tuts-github-pages">Tuts GitHub Pages Project</a></li>
+                <li><a href="http://jbrad.github.io/tuts-github-pages/">Tuts GitHub Pages Site</a></li>
+                <li><a href="https://help.github.com/articles/github-flavored-markdown">GitHub Flavored Markdown</a></li>
+            </ul>
+        </div>
+    </div>
+</aside><!-- /.blog-sidebar -->
+
+    </div><!-- /.row -->
+</div><!-- /.container -->
+
+<footer class="blog-footer">
+    <p>&copy;2014&nbsp;<a href="#">Tuts+ GitHub Pages</a> &middot; Tuts GitHub Pages by <a href="http://jasonbradley.me">Jason Bradley</a> &middot; Powered by WordPress</p>
+    <p>
+        <a href="#">Back to top</a>
+    </p>
+</footer>
+
+</body>
